<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SJPL Summer Reading Challenge</string>
    <string name="title_summer_activity">Play</string>
    <string name="title_daily_reading">Read</string>
    <string name="title_daily_win">Win</string>
    <string name="title_information">Information</string>
    <string name="action_settings">Settings</string>

    <string name="reader_type">Reader Type</string>
    <string name="dialog_submit">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    
    <string name="change_user">Change User</string>
    
    <string name="confirm_activity_completed">I did it!</string>
    <string name="confirm_activity_later">Do it later</string>
    
    <string name="confirm_activity_enter_note">Enter Note Here (Optional)</string>
    
    <string name="title_activity_grid">Complete activities in any 4 squares in a row (vertical, horizontal, or diagonal) to win a prize. Complete all activities to be entered into prize drawings.</string>
    <string name="title_activity_grid_old">Complete any 5 squares in a row to win a prize.</string>
    <string name="title_activity_prizes">PRIZES</string>
    <string name="title_activity_badges">READING BADGES</string>
    
    <string name="title_activity_you_have_read">You have read:</string>
    <string name="title_win_prize_default">Tap to play</string>
    <string name="title_win_prize_header_1">Bingo</string>
    <string name="title_win_prize_header_2">Black out</string>
    <string name="title_win_prize_header_3">Reading</string>
    
    <string name="title_choose_user">Select your name to play</string>
    
    <string name="daily_reading_add_twenty">Add 20 minutes</string>
    <string name="daily_reading_remove_twenty">oops! Remove 20 minutes</string>
    
    <string name="label_register">Register New Account</string>
    <string name="label_login">Login</string>
    <string name="label_username">User Name</string>
    <string name="label_name">Name</string>
    <string name="label_pin">4 Digit Pin</string>
    <string name="label_age">Age</string>
    <string name="label_email">Email Address</string>
    <string name="label_phone">Phone (10 Digits)</string>
    <string name="label_login_in_register">Already have an account? Login Here</string>
    <string name="label_fyp">Forgot Pin?</string>
    <string name="label_register_in_login">Don\'t have an account? Register Here</string>
    
    <string name="label_fname">First Name</string>
    <string name="label_lname">Last Name</string>
    
    <string-array name="reader_type">
        <item>Pre Reader</item>
        <item>Reader</item>
        <item>Advanced</item>
    </string-array>
 
 <string name="languages_prompt">Spoken Language</string>
 
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>Tagalog</item>
        <item>Korean</item>
        <item>Hindi</item>
        <item>Farsi</item>
        <item>Other</item>
        </string-array>

    <string name="label_add">Add</string>
    <string name="label_done">Back</string>

    <string name="label_choose_user_add">Add a Family Member</string>
    <string name="label_choose_user_select">Select</string>

    <string name="info_bodyA"><![CDATA[Pick up all prizes at your local <a href="www.sjpl.org/locations">SJPL branch</a> between June 1 and July 31, 2014.]]></string>
    <string name="info_body">
    <![CDATA[
<html>
<body>
<h3>Information</h3>
<p>Congratulations on accepting the San Jose Public Library Summer Reading Challenge! This year’s program runs from June 1—July 31, 2014. </p>

<p>The SJPL Summer Reading Challenge has two parts—a Game Grid and a Reading Battery. </p>

<h3>Game Grid</h3>
<p>The Game Grid offers challenges in four categories:</p>
<p><img src="read.png" alt="read - book icon" align="absmiddle" /> <strong>READ</strong> at least 20 minutes a day to maintain your reading skills.<br />
<img src="learn.png" alt="read - book icon" align="absmiddle" /> <strong>LEARN</strong> about science, technology, engineering, arts, and math (STEAM).<br />
<img src="explore.png" alt="read - book icon" align="absmiddle" /> <strong>EXPLORE</strong> free library and community resources.<br />
<img src="energize.png" alt="read - book icon" align="absmiddle" /> <strong>ENERGIZE</strong> your mind and body.
</p>

<h3>Using the Game Grid</h3>
<ul>
<li>Click on a Game Grid square to open it and view the activity. When you have completed the activity, click the "I did it!" button. If you have not completed the activity, click "Do it Later" to return to your Game Grid.</li>
<li>Optional: write a note about what you read or did.</li>
<li>Complete any 5 squares in a row (vertical, horizontal, or diagonal) to receive prizes.</li>
<li>Fill in all the squares ("blackout") to receive bonus prizes.</li> 
<li>Any of the activity squares (except "Charge Your Reading Battery") on the Game Grid may be replaced by the following reading activities: 
<ul>
<li>Pre-Readers = "Read/sing/talk with your child for 20 minutes"</li>
<li>Readers = "Read for 20 minutes"</li>
<li>Teens and Adults = "Read for three hours"</li>
</li>
</ul>
</ul>

<h3>Reading Battery</h3>
<p>Challenge yourself to read for 20 minutes a day! Keep track of the time you spend reading using the Reading Battery. </p>
<ul>
<li>To view, click the "Reading Battery" tab to the right of the "Game Grid" tab.</li>
<li>For every 20 minutes you read, click on the "I read for 20 minutes" button. This will automatically fill in 20 minutes of your Reading Battery.</li>
<li>All reading counts: reading can be done anywhere, and using any format.</li>
<li>If you fill your Reading Battery, you’ll charge the Summer Reading Robot and win bonus prizes.</li>
</ul>

<h3>Prizes</h3>
<p>Pick up all prizes at your local <a href="http://www.sjpl.org/locations">SJPL branch</a> between June 1 and July 31, 2014. </p>

<h3>Add a Family Member</h3>
<p>Your whole family can take the Summer Reading Challenge using one account! </p>
<ul>
<li>Click the person icon in the top right corner.</li>
<li>Click the "Add Family Member" button to create a new user on your account.</li>
</ul>

<h3>Video</h3>
<p>For more information on using the SJPL Summer App, check out this <a href="http://youtu.be/aH7IxBaJtVs">short video</a>.</p>

<h3>More Information</h3>
<p>To find recommended book lists, library event listings, and information on other summer contests, check out the Library’s <a href="http://www.sjpl.org/summer">Summer Reading</a> website. </p>

<h3>Thank You</h3>
<p>The SJPL Summer Reading App and Website were created by a team of SJPL staff and pro bono developers from <a href="http://www.ebayinc.com/">eBay, Inc.</a> Special thanks to eBay, Inc. for its support of summer learning in San José!</p>

</body>
</html>
   ]]>
    </string>
    
    </resources>
